Add some fallback fonts to the CSS.
DejaVu, Helvetica, and Calibri should apparently cover most Linux, Mac,
and Windows users, respectively.  I'm debating including Noto Sans as an
@font-face.

--- a/porygo_nz/static/porygo-nz.css
+++ b/porygo_nz/static/porygo-nz.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     background: #F0F0F0;
     line-height: 1.4;
-    font-family: Noto Sans;
+    font-family: Noto Sans, DejaVu Sans, Helvetica, Calibri, sans-serif;
 }
 
 /* Header */
