Fix a few tiny inconsitencies.

--- a/porygo_nz/static/porygo-nz.css
+++ b/porygo_nz/static/porygo-nz.css
@@ -212,7 +212,7 @@ a.type {
     padding: 1px;
     border: 1px solid;
     border-radius: 5px;
-    color: white;
+    color: #FFFFFF;
     text-shadow: 1px 0 black, 1px 1px black, 0 1px black;
 }
 
