Scale images up pixelly.
This doesn't look the *greatest* when one pixel is a non-integer number
of physical pixels but it's still better than blurring everything.

If I ever use any non-pixel images I guess I'll need to split this into
a class but whatever I can cross that bridge if I get there

--- a/porygo_nz/static/porygo-nz.css
+++ b/porygo_nz/static/porygo-nz.css
@@ -135,7 +135,12 @@ h1 {
 }
 
 /* Images */
-img { vertical-align: middle; }
+img {
+    vertical-align: middle;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: pixelated;
+}
+
 img.pokemon-icon { background: url(/static/circle.svg) center no-repeat; }
 
 /* Misc. */
