--- a/porygo_nz/static/porygo-nz.css
+++ b/porygo_nz/static/porygo-nz.css
@@ -1,3 +1,20 @@
+/*** Colors ***/
+
+:root {
+    --black: #000000;
+    --white: #FFFFFF;
+    --grey-bg: #F0F0F0;
+    --grey-border: #CCCCCC;
+    --grey-stripe-light: #F8F8F8;
+    --grey-stripe-dark: #E8E8E8;
+    --grey-stripe-light-border: #E8E8E8;
+    --grey-stripe-dark-border: #D8D8D8;
+    --turquoise: #5094B8;
+    --turquoise-border: #4884A5;
+    --turquoise-hover: #68ACD0;
+}
+
+
 /*** Page layout ***/
 
 html { font-size: 16px; }
@@ -7,7 +24,7 @@ body {
     flex-direction: column;
     padding: 0;
     margin: 0;
-    background: #F0F0F0;
+    background: var(--grey-bg);
     line-height: 1.4;
     font-family: Noto Sans, DejaVu Sans, Helvetica, Calibri, sans-serif;
 }
@@ -33,14 +50,14 @@ nav ul {
 }
 
 nav#main-nav {
-    background: #5094B8;
+    background: var(--turquoise);
     font-size: 1.5rem;
     line-height: 1;
     padding: 0 2rem;
 }
 
 nav#main-nav { z-index: 1; }
-nav#main-nav a { color: #FFFFFF; }
+nav#main-nav a { color: var(--white); }
 
 a#site-title {
     font-size: 2rem;
@@ -67,7 +84,7 @@ nav#main-nav li { padding: 0 0.5rem; }
 
     a#site-title {
         text-align: center;
-        border-bottom: 2px solid #407693;
+        border-bottom: 2px solid var(--turquoise-border);
     }
 
     nav#main-nav ul {
@@ -79,8 +96,8 @@ nav#main-nav li { padding: 0 0.5rem; }
 
 /* Subnav */
 nav#subnav {
-    background: #FFFFFF;
-    border-bottom: 2px solid #CCCCCC;
+    background: var(--white);
+    border-bottom: 2px solid var(--grey-border);
     padding: 0.5rem 2rem;
     line-height: 1.2;
 }
@@ -118,16 +135,16 @@ main > *:first-child { margin-top: 0; }
 /*** General styles ***/
 
 /* Links */
-a { color: #5094B8; text-decoration: none; }
-a:hover { color: #68ACD0; }
+a { color: var(--turquoise); text-decoration: none; }
+a:hover { color: var(--turquoise-hover); }
 main a { font-weight: bold; }
 
 /* Headings */
 h1 {
-    background: #5094B8;
+    background: var(--turquoise);
     font-size: 1.5rem;
-    color: #FFFFFF;
-    border: 2px solid #4884A5;
+    color: var(--white);
+    border: 2px solid var(--turquoise-border);
     border-radius: 0.375rem;
     padding: 0.25rem 0.5rem;
     margin: 1.25rem calc(-0.5rem - 2px);
@@ -173,20 +190,26 @@ table {
     white-space: nowrap;
 }
 
-tbody { border: solid #CCCCCC; border-width: 0 2px; }
+tbody { border: solid var(--grey-border); border-width: 0 2px; }
 tbody:first-of-type { border-top-width: 2px; }
 tbody:last-of-type { border-bottom-width: 2px; }
-tbody:nth-of-type(odd) { background-color: #F8F8F8; }
-tbody:nth-of-type(even) { background-color: #E8E8E8; }
+tbody:nth-of-type(odd) { background-color: var(--grey-stripe-light); }
+tbody:nth-of-type(even) { background-color: var(--grey-stripe-dark); }
 
 tbody + tbody {
     /* 1px double looks the same as solid, but will take precedence over a tr's
-       solid border */
-    border-top: 1px double #D8D8D8;
+       solid border -- this is necessary if the first row in a tbody is hidden
+       (e.g. because of Pokémon form collapsing) */
+    border-top: 1px double var(--grey-stripe-dark-border);
 }
 
-tbody:nth-of-type(odd) > tr + tr { border-top: 1px solid #E8E8E8; }
-tbody:nth-of-type(even) > tr + tr { border-top: 1px solid #D8D8D8; }
+tbody:nth-of-type(odd) > tr + tr {
+    border-top: 1px solid var(--grey-stripe-light-border);
+}
+
+tbody:nth-of-type(even) > tr + tr {
+    border-top: 1px solid var(--grey-stripe-dark-border);
+}
 
 td, th { padding: 0 0.5rem; }
 td:first-child, th:first-child { padding-left: 1.5rem; }
@@ -223,14 +246,14 @@ a.type {
     width: 4.5em;
 
     padding: 1px;
-    border: 1px solid #000000;  /* Black as fallback */
+    border: 1px solid var(--black);  /* Black as fallback */
     border-color: var(--type-border);
     border-radius: 5px;
     box-shadow: 0 0 1.2px var(--type-border) inset;
 
     text-align: center;
-    color: #FFFFFF;
-    text-shadow: 1px 0 #000000, 1px 1px #000000, 0 1px #000000;
+    color: var(--white);
+    text-shadow: 1px 0 var(--black), 1px 1px var(--black), 0 1px var(--black);
 }
 
 a.type:hover { text-decoration: underline; }
