Show Pokémon's abilities.
I'd like to do something smarter to determine whether the current gen
has abilities, rather than hardcoding Gen 3+.  (Especially once I get
Let's Go in there.)

--- a/porygo_nz/static/porygo-nz.css
+++ b/porygo_nz/static/porygo-nz.css
@@ -151,6 +151,10 @@ h1 {
     line-height: 1;
 }
 
+h2 {
+    border-bottom: 2px solid var(--turquoise);
+}
+
 /* Images */
 img {
     vertical-align: middle;
